# v-hacd

./: .gitignore  CMakeLists.txt  ammo.h  ammo.idl  back-matter.js  build-cli.sh  build-lib.sh  docker-compose.yml  onload.js  package.json  test.js  test.sh  test2.js
app/: CMakeLists.txt  TestVHACD.cpp
include/: VHACD.h
web-app/: next.config.js  package.json
web-app/components/: PhysicalModel.js  Rain.js  Scene.js  VHACD.js
web-app/pages/: demo.js
web-app/public/: vhacd
web-app/public/models/: spaceship-decomp.json
web-app/src/: QuickHull.js  getCollisionHulls.js
web-app/src/hooks/: useVHACD.js
web-app/styles/: globals.css
